# tauri-react

./: .gitignore  README.md  index.html  package.json  tsconfig.json  vite.config.ts
src/: App.css  App.tsx  CONSTANTS.ts  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src-tauri/src/handlers/: common.rs  example.rs  hello_world.rs  mod.rs
src-tauri/src/setups/: window.rs
src/@hybrid/: hybrid.ts  readme.md
src/@hybrid/browser/: index.ts
src/@hybrid/tauri/: index.ts
src/components/EasyMotions/: Slide.tsx  index.tsx
src/components/Layout/: DocView.tsx  TagView.tsx  TransitionRoutes.tsx  Window.tsx
src/components/Loading/: Loading1.tsx  Loading2.tsx  style.css
src/components/Page/: index.tsx
src/components/Palette/: Simple.tsx  index.tsx
src/components/ScrollBar/: style.ts
src/components/TabView/: TabPage.tsx  index.tsx
src/components/TagView/: TagPage.tsx  index.tsx  readme.md
src/components/TagView/utils/: withInitialize.tsx
src/components/Widgets/LogoText/: index.tsx  style.less
src/components/Widgets/Pacman/: index.tsx  style.less
src/contexts/: AppConfig.tsx  persistent.ts
src/db/: index.ts
src/db/dao/: AppConfig.ts  AppTags.ts
src/db/hook/: useRxState.tsx
src/db/schema/: AppConfig.ts  AppTags.ts
src/pages/: Homepage.tsx  MuiComps.tsx  PageA.tsx  PageB.tsx
src/pages/PokemonHandbook/: index.tsx
src/pages/docs/: index.tsx  routes.tsx
src/pages/docs/components/: DocContent.tsx
src/pages/examples/TabView/: PageA.tsx  PageB.tsx
src/pages/examples/TrackingLog/: index.tsx
src/pages/introduce/: PageA.tsx  PageB.tsx
src/pages/setting/: MuiComps.tsx
src/routes/: index.tsx
src/store/: index.ts
src/store/reducers/: theme.ts
src/tracking/: README.md  custom.events.ts  index.ts  page.wrapper.tsx
src/tracking/impls/: default.ts  example_emit.ts  mf.ts  uma.ts
src/tracking/tool/: Agent.ts  duration.ts
src/utils/: async_process.ts  delay.ts
types/: app-tag.d.ts  global.d.ts  mui.d.ts
(+21 files in other folders)
