[package]
authors = ["you"]
description = "A Tauri App"
edition = "2021"
license = ""
name = "tauri-react"
repository = ""
version = "0.0.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = {version = "1.5", features = [] }

[dependencies]
cocoa = "0.25.0"
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = {version = "1.5", features = [ "dialog-all", "window-hide", "window-unmaximize", "window-unminimize", "window-show", "window-start-dragging", "window-maximize", "window-close", "window-minimize", "shell-open"] }
tokio = {version = "1.35.0", features = ["full"] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
